@@ -1,6 +1,7 @@
 Revision history for App-Pocoirc
 
 {{$NEXT}}
+    - Updated Pocoirc.pm's Pod to reflect some recent changes
 
 0.26  Wed Sep 29 05:22:25 UTC 2010
     - Fix a problem with using the Status plugin on multiple networks
